--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,5 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
+  "buildCommand": "cd backend && npm install && npm run build && cd .. && npm run build",
   "framework": "nextjs",
-  "installCommand": "npm install",
-  "env": {
-    "MONGODB_URI": "@mongodb_uri",
-    "JWT_SECRET": "@jwt_secret",
-    "OPENROUTER_API_KEY": "@openrouter_api_key",
-    "SILICONFLOW_API_KEY": "@siliconflow_api_key",
-    "AI_SERVICE_TYPE": "siliconflow"
-  },
-  "functions": {
-    "api/**/*.ts": {
-      "maxDuration": 30
-    }
-  }
+  "installCommand": "npm install && cd backend && npm install && cd .."
 }
