--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd backend && npm install && npm run build && cd .. && npm run build",
+  "buildCommand": "npm run build:backend && npm run build:frontend",
   "framework": "nextjs",
   "installCommand": "npm install && cd backend && npm install && cd .."
 }
